Oct 24, 2002: Alex Burger <alex@users.sourceforge dot net>
- Make UT logo round, remove 2 from UT2 logo
- Improve custom args editor

Oct 24, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- code cleanup
- do not append first argument directly to ip in ut to be consistent with q3

Oct 23, 2002: Jordi Mallach <jordi@sindominio.net>
- Update Catalan and Spanish translations.

Oct 23, 2002: Alex Burger <alex@users.sourceforge dot net>
- Add spacing around button
- Added file dialog box (... button) to game config page
- Removed rafix option from q3_exec
- Modified vmfix option in q3_exec to make custom args preferred over
  vmfix args
- Added button to add default custom args to editor page
- Add default custom args for UT StrikeForce & TacticalOps
- Add default custom args for Q3A Rocket Arena

Oct 23, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- remove old tribes2 master, add three new
- increase version to 0.9.9.3

Oct 22, 2002: Alex Burger <alex@users.sourceforge dot net>
- user_fix_defaults is now called if the version changes at all
- add_custom_args_defaults created, user_fix_defaults calls it to 
  add some default args for games
- add default custom args for StrikeForce & TacticalOps

Oct 22, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- use optimal width for arguments editor

Oct 21, 2002: Alex Burger <alex@users.sourceforge dot net>
- Added tooltips to custom args editor
- Update docs
- Add Replace button to custom args editor
- Cleaned up new arguments editor

Oct 21, 2002: Alex Burger <alex@users.sourceforge dot net>
- Added new arguments editor - new tab for Q3, UT, UT2003

Oct 20, 2002: Alex Burger <alex@users.sourceforge dot net>
- Fixed width of redial button
- Added support for ~ in file master filename
- Fix edit menu sensitivity problem for add / remove fav

Oct 19, 2002: Alex Burger <alex@users.sourceforge dot net>
- Updated documentation
- Added server properties password page support to Unreal, UT2003
  and Rune