@@ -1,4 +1,6 @@
 Oct 24, 2002: Alex Burger <alex@users.sourceforge dot net>
+- Add note to Unreal Tournament config page to see documentation
+  for modifications to UT script.
 - Make UT logo round, remove 2 from UT2 logo
 - Improve custom args editor
 
